@@ -22,16 +22,6 @@
 
 package org.exist.validation.resolver;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.StringReader;
-import java.io.StringWriter;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.util.Arrays;
-import java.util.Optional;
-import java.util.Properties;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.xerces.xni.XMLResourceIdentifier;
@@ -59,6 +49,15 @@ import org.xml.sax.SAXNotSupportedException;
 import org.xmlresolver.Resolver;
 
 import javax.xml.transform.OutputKeys;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.StringReader;
+import java.io.StringWriter;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.List;
+import java.util.Optional;
+import java.util.Properties;
 
 import static com.evolvedbinary.j8fu.tuple.Tuple.Tuple;
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -82,7 +81,7 @@ public class SearchResourceResolver implements XMLEntityResolver {
         this.collectionPath = collectionPath;
 
         if (LOG.isDebugEnabled()) {
-            LOG.debug("Specified collectionPath=" + collectionPath);
+            LOG.debug("Specified collectionPath={}", collectionPath);
         }
     }
 
@@ -95,7 +94,7 @@ public class SearchResourceResolver implements XMLEntityResolver {
         }
 
         if (LOG.isDebugEnabled()) {
-            LOG.debug("Resolving XMLResourceIdentifier: " + getXriDetails(xri));
+            LOG.debug("Resolving XMLResourceIdentifier: {}", getXriDetails(xri));
         }
 
 
@@ -105,7 +104,7 @@ public class SearchResourceResolver implements XMLEntityResolver {
         if (xri.getNamespace() != null) {
             // XML Schema search
             if (LOG.isDebugEnabled()) {
-                LOG.debug("Searching namespace '" + xri.getNamespace() + "' in database from " + collectionPath + "...");
+                LOG.debug("Searching namespace '{}' in database from {}...", xri.getNamespace(), collectionPath);
             }
 
             resourcePath = databaseResources.findXSD(collectionPath, xri.getNamespace(), subject);
@@ -113,12 +112,12 @@ public class SearchResourceResolver implements XMLEntityResolver {
         } else if (xri.getPublicId() != null) {
             // Catalog search
             if (LOG.isDebugEnabled()) {
-                LOG.debug("Searching publicId '" + xri.getPublicId() + "' in catalogs in database from " + collectionPath + "...");
+                LOG.debug("Searching publicId '{}' in catalogs in database from {}...", xri.getPublicId(), collectionPath);
             }
 
             String catalogPath = databaseResources.findCatalogWithDTD(collectionPath, xri.getPublicId(), subject);
             if (LOG.isDebugEnabled()) {
-                LOG.debug("Found publicId in catalog '" + catalogPath + "'");
+                LOG.debug("Found publicId in catalog '{}'", catalogPath);
             }
 
             if (catalogPath != null) {
@@ -143,7 +142,7 @@ public class SearchResourceResolver implements XMLEntityResolver {
                         maybeInputSource.get().setSystemId(catalogPath);
                     }
 
-                    final Resolver resolver = ResolverFactory.newResolver(Arrays.asList(Tuple(catalogPath, maybeInputSource)));
+                    final Resolver resolver = ResolverFactory.newResolver(List.of(Tuple(catalogPath, maybeInputSource)));
                     final InputSource source = resolver.resolveEntity(xri.getPublicId(), "");
                     if (source != null) {
                         resourcePath = source.getSystemId();
@@ -169,15 +168,15 @@ public class SearchResourceResolver implements XMLEntityResolver {
         resourcePath = ResolverFactory.fixupExistCatalogUri(resourcePath);
 
         if (LOG.isDebugEnabled()) {
-            LOG.debug("resourcePath='" + resourcePath + "'");
+            LOG.debug("resourcePath='{}'", resourcePath);
         }
-        
-        final InputStream is = new URL(resourcePath).openStream();
+
+        final InputStream is = URI.create(resourcePath).toURL().openStream();
 
         final XMLInputSource xis = new XMLInputSource(xri.getPublicId(), xri.getExpandedSystemId(), xri.getBaseSystemId(), is, UTF_8.name());
 
         if (LOG.isDebugEnabled()) {
-            LOG.debug("XMLInputSource: " + getXisDetails(xis));
+            LOG.debug("XMLInputSource: {}", getXisDetails(xis));
         }
 
         return xis;
